[package]
description = "A set of utilities for working with the [raqote](https://github.com/jrmuizel/raqote) 2D graphics library."
name = "raqote-utils"
version = "0.2.0"
edition = "2021"
authors = ["sk337 <me@pk3.zip>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sk337/raqote-utils"


[dependencies]
font-kit = "0.13.2"
raqote = "0.8.4"
regex = "1.10.6"
