[package]
description = "A set of utilities for working with the [raqote](https://github.com/jrmuizel/raqote) 2D graphics library."
name = "raqote-utils"
version = "0.2.1"
edition = "2021"
authors = ["sk337 <me@pk3.zip>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sk337/raqote-utils"


[dependencies]
euclid = "0.22.11"
font-kit = "0.13.2"
pathfinder_geometry = "0.5.1"
raqote = "0.8.4"
regex = "1.10.6"
rustybuzz = "0.18.0"
